# SoftwareRenderer

./: .gitignore  CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  my_gl.cpp  my_gl.hpp  render.cpp  render.hpp  shaders.hpp  tgaimage.cpp  tgaimage.h  that_triangle.cpp
for publishing/: README.txt
for publishing/src/: CMakeLists.txt  geometry.h  main.cpp  model.h  my_gl.cpp  my_gl.hpp
for publishing/src/output/: 3-6_1-56.tga  3-7_15-22.tga  3-7_16-55.tga  3-7_17-1.tga  3-7_17-3.tga  3-7_23-20.tga
output/: 3-6_1-58.tga  3-7_16-11.tga  3-7_17-5.tga  3-7_23-14.tga  3-7_23-17.tga  3-7_23-22.tga  5-28_17-11.tga  5-28_17-15.tga  5-28_17-16.tga  5-28_22-19.tga  6-10_16-3.tga  6-17_17-42.tga  6-17_17-48.tga  6-17_17-57.tga  6-17_18-0.tga  6-17_18-1.tga  6-17_18-2.tga  6-18_17-19.tga  6-20_18-20.tga  6-20_18-22.tga  6-4_16-25.tga  6-4_16-29.tga  6-4_16-31.tga  6-5_11-29.tga  6-5_11-30.tga  7-21_22-15.tga  7-21_22-17.tga  7-21_22-18.tga  7-21_22-21.tga  7-21_22-28.tga  7-21_23-12.tga  7-22_19-14.tga  7-23_0-0.tga  7-26_15-19.tga  7-26_15-19_buffer.tga  7-26_15-20.tga_buffer.tga  7-28_0-42.tga_buffer.tga  7-28_0-43.tga_buffer.tga  7-28_0-52.tga  7-28_0-52.tga_buffer.tga  (+144 more)
